# lora_qwen

./: .gitignore  LICENSE  README.md  pyproject.toml
lora_qwen/: __init__.py  evaluate.py  flops.py  preprocessor.py  qwen.py  train_lora.py
results/: flops_summary.txt
results/baseline_results/: baseline_metrics.txt  preprocessing_examples.txt
results/lora_results/ctx_length_search/: best_config.json  context_length.csv  hyperparameters.json  results.json
results/lora_results/default_param/: baseline_vs_lora.csv  hyperparameters.json  results.json
results/lora_results/final_model/: final_comparison.csv  hyperparameters.json  results.json
results/lora_results/hyperparam_search/: hyperparameter_result.csv
results/lora_results/hyperparam_search/lr_0.0001_rank_2/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_0.0001_rank_4/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_0.0001_rank_8/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_1e-05_rank_2/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_1e-05_rank_4/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_1e-05_rank_8/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_5e-05_rank_2/: hyperparameters.json  results.json
results/lora_results/hyperparam_search/lr_5e-05_rank_4/: hyperparameters.json  results.json
run/: explore_dataset.ipynb  run_baseline.ipynb  run_flops_calculation.ipynb  run_lora.ipynb
(+2 files in other folders)
