[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora_qwen"
version = "0.1.0"
description = "LoRA fine-tuning of Qwen2.5-Instruct for predator-prey time series forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Keying Song", email = "ks2146@cam.ac.uk"}
]

dependencies = [
"torch",
"transformers",
"tqdm",
"h5py",
"numpy",
"pandas",
"matplotlib",
"accelerate",
"scikit-learn",
"seaborn"
]

[tool.setuptools]
packages = ["lora_qwen"]
